# i-see-you-see-me

./: .gitignore  README.md
app/: Package.swift
app/Scripts/: package_app.sh
app/Shaders/: Iris.metal
app/Sources/ISeeYou/: AppState.swift  ISeeYouApp.swift  MenuView.swift  PresenceEvent.swift
app/Sources/ISeeYou/Engine/: AttentionEngine.swift  HeadPoseEstimator.swift
app/Sources/ISeeYou/Eyes/: EyesView.swift
app/Sources/ISeeYou/Narration/: MultimodalAttentionEstimator.swift  Narrator.swift
app/Sources/ISeeYou/Sensor/: LocalCameraSource.swift  OAKSource.swift  SensorSource.swift
docs/: DEMO.md  PLAN.md
sensor/: pyproject.toml
sensor/.cache/depthai/telemetry/: tmpIds.json
sensor/src/oak_sensor/: main.py
